RESOLVED FIXED85971
[EFL] EFL's DumpRenderTree does not print didReceiveTitle messages
https://bugs.webkit.org/show_bug.cgi?id=85971
Summary [EFL] EFL's DumpRenderTree does not print didReceiveTitle messages
Chris Dumez
Reported 2012-05-09 02:53:55 PDT
EFL's DumpRenderTree does not print didReceiveTitle messages which are expected by the following tests: http/tests/loading/post-in-iframe-with-back-navigation.html http/tests/loading/redirect-with-no-location-crash.html
Attachments
Patch (5.91 KB, patch)
2012-05-09 02:59 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-05-09 02:59:17 PDT
Chris Dumez
Comment 2 2012-05-14 07:02:00 PDT
Could I get informal review on this one?
Raphael Kubo da Costa (:rakuco)
Comment 3 2012-05-14 07:07:35 PDT
Comment on attachment 140896 [details] Patch Makes sense to me.
Gyuyoung Kim
Comment 4 2012-05-14 18:00:14 PDT
Comment on attachment 140896 [details] Patch Looks fine to me as well as kubo.
WebKit Review Bot
Comment 5 2012-05-21 20:46:19 PDT
Comment on attachment 140896 [details] Patch Clearing flags on attachment: 140896 Committed r117894: <http://trac.webkit.org/changeset/117894>
WebKit Review Bot
Comment 6 2012-05-21 20:46:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.