[EFL] EFL's DumpRenderTree does not print didReceiveTitle messages https://bugs.webkit.org/show_bug.cgi?id=85971

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-05-21
Reviewed by Antonio Gomes.

Tools:

Listen for the "title,changed" signal on the frames instead of the
view so that we get notified for other frame than the main one.
Print out the didReceiveTitle messages which are expected if
LayoutTestController's dumpFrameLoadCallbacks() returns true.

* DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
(DumpRenderTreeChrome::createView):
(DumpRenderTreeChrome::onFrameTitleChanged):
(DumpRenderTreeChrome::onFrameCreated):
* DumpRenderTree/efl/DumpRenderTreeChrome.h:
(DumpRenderTreeChrome):

LayoutTests:

Unskip http/tests/loading/redirect-with-no-location-crash.html now
that EFL's DumpRenderTree prints out the expected didReceiveTitle
messages.

* platform/efl/Skipped:

Canonical link: https://commits.webkit.org/104747@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117894 268f45cc-cd09-0410-ab3c-d52691b4dbfc